# engram

./: .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENGRAM.md  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  install.sh  rust-toolchain.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: bootstrap.md  claude-code-setup.md  code-review-and-fix-plan.md  integration-test-plan.md  server.rs重构设计.md  开源就绪修复计划.md  记忆系统设计文档.md  迭代优化路线图.md
scripts/: engram-common.sh
src/: config.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/cli/templates/: engram_guide.md.tmpl
src/collectors/: docs.rs  failures.rs  git_collector.rs  mod.rs  workflow.rs
src/consolidation/: engine.rs  mod.rs
src/context/: composer.rs  mod.rs
src/git_integration/: listener.rs  mod.rs
src/graph/: engine.rs  mod.rs
src/mcp/: embedding_service.rs  mod.rs  server.rs  server_tests.rs  transport.rs
src/models/: decision.rs  entity.rs  episodic.rs  failure.rs  intent.rs  mod.rs  procedural.rs
src/reflection/: engine.rs  mod.rs
src/retrieval/: bm25.rs  embedding.rs  fusion.rs  intent_classifier.rs  mod.rs  planner.rs  reranker.rs  vector.rs
src/storage/: macros.rs  mod.rs  repository.rs
tests/: integration_test.sh  mcp_e2e.rs
