[package]
name = "engram"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "column_decltype"] }
petgraph = "0.6"
git2 = "0.19"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
