[package]
name = "engram"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A local-first memory system for AI coding agents — persistent engineering knowledge via MCP"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "memory", "ai", "coding-agent", "sqlite"]
categories = ["development-tools", "database"]
repository = "https://github.com/uzziahlin/engram"


[features]
default = []
# Semantic/embedding retrieval — OFF by default to keep the release binary
# self-contained and offline-friendly.
semantic = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "column_decltype"] }
# gix (pure-Rust git) replaces git2 to eliminate dynamic linking of
# openssl/libssh2/libz — keeps the release binary self-contained and portable.
gix = { version = "0.83", default-features = false, features = ["blob-diff", "sha1"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "6"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24"
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
tokenizers = { version = "0.23.1", optional = true }
hf-hub = { version = "0.5.0", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
